# alkira-kb-mcp

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
alkira_kb_mcp/: __init__.py  client.py  config.py  mcp_app.py  server.py  server_http.py
