[project]
name = "alkira-kb-mcp"
version = "0.1.0"
description = "MCP server for Alkira's Answer Machine — Knowledge Plane access via stdio."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [{name = "Alkira SE Team"}]
dependencies = [
    "mcp>=1.5,<2",
    "httpx>=0.27,<1",
]

[project.scripts]
alkira-kb-mcp = "alkira_kb_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["alkira_kb_mcp"]
