[project]
name = "alkira-kb-mcp"
version = "0.2.0"
description = "MCP server for Alkira's Answer Machine — stdio (uvx-distributable) + streamable-HTTP (Cloud Run) transports."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [{name = "Alkira SE Team"}]
dependencies = [
    "mcp>=1.5,<2",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
http = [
    "uvicorn[standard]>=0.30,<1",
]

[project.scripts]
alkira-kb-mcp = "alkira_kb_mcp.server:main"
alkira-kb-mcp-http = "alkira_kb_mcp.server_http:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["alkira_kb_mcp"]
